[package]
name = "gh-auditor"
version = "0.1.0"
authors = ["Erin Power <xampprocky@gmail.com>"]
edition = "2018"
description = "Audit your GitHub organisation"
license = "Apache-2.0/MIT"
repository = "https://github.com/XAMPPRocky/gh-auditor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
snafu = { version = "0.6.0", features = ["backtraces"] }
reqwest = "0.9.22"
doc-comment = "0.3.1"
serde_json = "1.0.44"
log = { version = "=0.4.8", features = ["kv_unstable"] }
env_logger = "0.7.1"
hyperx = "0.15.2"
serde = "1.0.103"
